<resources>
    <string name="app_name">Smile Overlay</string>

    <string name="dialog_allow_permission_display_over_other_apps">Allow \"Display over other apps\" to %1$s and tap again.</string>
    <string name="ok">OK</string>
    <string name="dialog_permission_required_apps">Permission required</string>

    <string name="foreground_notification_channel_id">channel_id_foreground_notification</string>
    <string name="foreground_notification_channel_name">Foreground Notification</string>
    <string name="foreground_notification_title">Displaying overlay</string>
    <string name="foreground_notification_text">Tap here to open application</string>
    <string name="foreground_notification_action_pause">PAUSE</string>
    <string name="foreground_notification_action_unpause">UNPAUSE</string>
    <string name="foreground_notification_action_show">SHOW</string>
    <string name="foreground_notification_action_hide">HIDE</string>

    <string name="action_settings">Settings</string>
    <string name="action_license">OSS License</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="preference_basic_settings">Basic Settings</string>
    <string name="preference_mqtt_settings">MQTT</string>
    <string name="preference_tcp_settings">TCP Listener</string>
    <string name="key_basic_settings">basicSettings</string>
    <string name="key_mqtt_settings">mqttSettings</string>
    <string name="key_tcp_settings">tcpSettings</string>

    <string name="basic_settings_fragment_label">Basic Settings</string>
    <string name="preference_category_basic">Basic</string>
    <string name="preference_category_comments_sources">Comment Sources</string>
    <string name="preference_duration">Duration</string>
    <string name="preference_max_comments_on_display">Max comments on display</string>
    <string name="preference_font_size">Font size</string>
    <string name="preference_text_color_style">Text color style</string>
    <string name="preference_text_stroke_style">Text stroke style</string>
    <string name="preference_newline_enabled">Newline enabled</string>
    <string name="preference_icon_enabled">Icon enabled</string>
    <string name="preference_inline_img_enabled">Inline image enabled</string>
    <string name="preference_img_enabled">Image enabled</string>
    <string name="preference_video_enabled">Video enabled</string>
    <string name="preference_round_icon_enabled">Round icon enabled</string>
    <string name="preference_hardware_acceleration_enabled">Hardware acceleration enabled</string>
    <string name="key_basic_duration">basicDuration</string>
    <string name="key_basic_max_comments_on_display">maxCommentsOnDisplay</string>
    <string name="key_basic_font_size">fontSize</string>
    <string name="key_basic_text_color_style">basicTextColorStyle</string>
    <string name="key_basic_text_stroke_style">basicTextStrokeStyle</string>
    <string name="key_basic_newline_enabled">basicNewlineEnabled</string>
    <string name="key_basic_icon_enabled">basicIconEnabled</string>
    <string name="key_basic_inline_img_enabled">basicInlineImgEnabled</string>
    <string name="key_basic_img_enabled">basicImgEnabled</string>
    <string name="key_basic_video_enabled">basicVideoEnabled</string>
    <string name="key_basic_round_icon_enabled">basicRoundIconEnabled</string>
    <string name="key_basic_hardware_acceleration_enabled">basicHardwareAccelerationEnabled</string>
    <string name="default_key_basic_duration">5000</string>
    <string name="default_key_basic_max_comment_on_display">0</string>
    <string name="default_key_basic_font_size">36pt</string>
    <string name="default_key_basic_text_color_style">rgba(255, 255, 255, 1.0)</string>
    <string name="default_key_basic_text_stroke_style">2px rgba(0, 0, 0, 1.0)</string>
    <string name="default_key_basic_newline_enabled">true</string>
    <string name="default_key_basic_icon_enabled">true</string>
    <string name="default_key_basic_inline_img_enabled">true</string>
    <string name="default_key_basic_img_enabled">true</string>
    <string name="default_key_basic_video_enabled">true</string>
    <string name="default_key_basic_round_icon_enabled">false</string>
    <string name="default_key_basic_hardware_acceleration_enabled">true</string>

    <string name="mqtt_settings_fragment_label">MQTT Settings</string>
    <string name="preference_category_mqtt">MQTT</string>
    <string name="preference_enable_mqtt">Enable MQTT</string>
    <string name="preference_server_uri">Server URI</string>
    <string name="preference_topic">Topic</string>
    <string name="preference_qos">QoS</string>
    <string name="preference_username">Username</string>
    <string name="preference_password">Password</string>
    <string name="preference_keep_connection_while_screen_is_off">Keep connection while screen is off</string>
    <string name="key_mqtt_enabled">mqttEnabled</string>
    <string name="key_mqtt_url">mqttUrl</string>
    <string name="key_mqtt_topic">mqttTopic</string>
    <string name="key_mqtt_qos">mqttQos</string>
    <string name="key_mqtt_username">mqttUsername</string>
    <string name="key_mqtt_password">mqttPassword</string>
    <string name="key_mqtt_keep_connection_while_screen_is_off">mqttKeepConnectionWhileScreenIsOff</string>
    <string name="default_key_mqtt_enabled">false</string>
    <string name="default_key_mqtt_qos">0</string>
    <string name="default_key_mqtt_keep_connection_while_screen_is_off">false</string>

    <string name="tcp_settings_fragment_label">TCP Listener Settings</string>
    <string name="preference_category_tcp_listener">TCP Listener</string>
    <string name="preference_enable_tcp">Enable TCP Listener</string>
    <string name="preference_bind_address">Bind address</string>
    <string name="preference_listen_port">Listen port</string>
    <string name="preference_keep_listening_while_screen_is_off">Keep listening while screen is off</string>
    <string name="key_tcp_enabled">tcpEnabled</string>
    <string name="key_tcp_bind_address">tcpBindAddress</string>
    <string name="key_tcp_listen_port">tcpListenPort</string>
    <string name="key_tcp_keep_listening_while_screen_is_off">tcpKeepListeningWhileScreenIsOff</string>
    <string name="default_key_tcp_enabled">false</string>
    <string name="default_key_tcp_listen_port">2525</string>
    <string name="default_key_tcp_bind_address">::</string>
    <string name="default_key_tcp_keep_listening_while_screen_is_off">false</string>
</resources>
