<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/preference_category_tcp_listener">
        <SwitchPreference
            android:defaultValue="@string/default_key_tcp_enabled"
            android:key="@string/key_tcp_enabled"
            android:title="@string/preference_enable_tcp" />

        <EditTextPreference
            android:defaultValue="@string/default_key_tcp_bind_address"
            android:dependency="@string/key_tcp_enabled"
            android:key="@string/key_tcp_bind_address"
            android:title="@string/preference_bind_address"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="@string/default_key_tcp_listen_port"
            android:dependency="@string/key_tcp_enabled"
            android:key="@string/key_tcp_listen_port"
            android:title="@string/preference_listen_port"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="@string/default_key_tcp_keep_listening_while_screen_is_off"
            android:dependency="@string/key_tcp_enabled"
            android:key="@string/key_tcp_keep_listening_while_screen_is_off"
            android:title="@string/preference_keep_listening_while_screen_is_off" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
