<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/preference_category_basic">
        <PreferenceScreen
            app:key="@string/key_basic_settings"
            app:title="@string/basic_settings_fragment_label">
            <PreferenceCategory />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_comments_sources">
        <PreferenceScreen
            app:key="@string/key_mqtt_settings"
            app:title="@string/preference_mqtt_settings">
            <PreferenceCategory />
        </PreferenceScreen>

        <PreferenceScreen
            app:key="@string/key_tcp_settings"
            app:title="@string/preference_tcp_settings">
            <PreferenceCategory />
        </PreferenceScreen>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
