<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="net.urainter.overlay.ui.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="net.urainter.overlay.ui.setting.SettingsFragment"
        android:label="@string/settings_fragment_label">

        <action
            android:id="@+id/action_SettingsFragment_to_BasicSettingsFragment"
            app:destination="@id/BasicSettingsFragment" />

        <action
            android:id="@+id/action_SettingsFragment_to_MqttSettingsFragment"
            app:destination="@id/MqttSettingsFragment" />

        <action
            android:id="@+id/action_SettingsFragment_to_TcpListenerSettingsFragment"
            app:destination="@id/TcpListenerSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/BasicSettingsFragment"
        android:name="net.urainter.overlay.ui.setting.BasicSettingsFragment"
        android:label="@string/basic_settings_fragment_label" />

    <fragment
        android:id="@+id/MqttSettingsFragment"
        android:name="net.urainter.overlay.ui.setting.MqttSettingsFragment"
        android:label="@string/mqtt_settings_fragment_label" />

    <fragment
        android:id="@+id/TcpListenerSettingsFragment"
        android:name="net.urainter.overlay.ui.setting.TcpListenerSettingsFragment"
        android:label="@string/tcp_settings_fragment_label" />

    <action
        android:id="@+id/action_SettingsFragment"
        app:destination="@id/SettingsFragment" />
</navigation>
